[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linkedset"
version = "0.1.0"
description = "Ordered set robust against mutation during iteration in Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Justin Chu" }]
requires-python = ">=3.9"
keywords = ["ordered-set", "linked-list", "data-structure", "iteration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/justinchuby/linkedset"
Documentation = "https://justinchuby.github.io/linkedset/"
Repository = "https://github.com/justinchuby/linkedset"
Issues = "https://github.com/justinchuby/linkedset/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff"]
docs = ["sphinx>=7", "furo", "myst-parser"]

[tool.hatch.build.targets.wheel]
packages = ["linkedset"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
